--- a/css/style_edit.css
+++ b/css/style_edit.css
@@ -76,7 +76,19 @@ body {
   resize: none;
 }
 
-input#imageUpload {
-    height: 50px;
+label#img-label{
+    display:block;
+    width:50px;
+    background: #e3362e;
+    text-align:center;
+    color:#fff;
+    padding:5px;
+    margin:10px auto;
+    border-radius:5px;
+    cursor:pointer;
 }
+input#imageUpload {
+    display: none;
+}
+
 
