--- a/css/style_home.css
+++ b/css/style_home.css
@@ -1,42 +1,48 @@
 /* Reset default margin and padding */
+.body{
+    background-color: #bee0ec;
+}
 
 .container {
-    flex: 1;
-    margin: 108px auto 15px auto ;
+    display: flex;
+    flex-wrap: wrap;
+    gap:5px;
+    margin: 50px 40px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 30px;
     background-color: #f9f9f9;
     padding: 10px;
     font-weight: bold;
-    height:300px;
-    width:200px;
+    height:400px;
+    width:180px;
     position:relative;
 }
 
 .container img{
     width:100%;
     height:100%;
+    border-radius:30px;
 }
 
 .container .center {
   position: absolute;
   left: 50%;
-  top:45%;
+  top:50%;
   transform: translate(-50%, -50%);
-  font-size: 12px;
+  font-size: 20px;
 }
 
 .container .bottom-left {
   position: absolute;
   bottom: 8px;
-  left: 16px;
+  left: 35px;
   font-size: 10px;
 }
 
 .container .bottom-right {
   position: absolute;
   bottom: 8px;
-  right: 16px;
+  right: 35px;
   font-size: 10px;
 }
 
